--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,9 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+             "bootstrap/dist/css/bootstrap.min.css"
+
             ],
             "scripts": []
           },
